# MediaStreaming

./: CMakeLists.txt  Dockerfile  Makefile  README.md
player/: CMakeLists.txt
player/src/: player.c  player.gresources.xml  playerapp.c  playerapp.h  playerappwin.c  playervideo.c  playervideo.h
player/src/style/: style.css
player/src/ui/: video-menu.ui  video.xsd  window.ui
server/: CMakeLists.txt
server/src/: server.c
src/: player.c  playerapp.c  playerappwin.c  playerappwin.h  playervideo.c  server.c
src/ui/: video.ui  window.ui
